# train_data_smoothing

./: CMakeLists.txt  README.md  package.xml
csv_files/: after_train.csv
launch/: task.launch  xarm6_bringup.launch
scripts/: plan_and_save_csv.py  train_path_pub.py
scripts/tools/: ex_and_con_cartesian_all.py  random_sg.py  visualization.py  xarm6_air_cut.py
